--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <!-- link to main stylesheet -->
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min_super.css') }}">
-    <link rel="stylesheet" type="text/css" href="/css/alt_14.css') }}">
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min_super.css">
+    <link rel="stylesheet" type="text/css" href="/css/alt_14.css">
     <title>Title</title>
 </head>
 <body>
