--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <!-- link to main stylesheet -->
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min_super.css">
     <link rel="stylesheet" type="text/css" href="/css/alt_14.css">
-    <title>Title</title>
+    <title>dwoolc github</title>
 </head>
 <body>
-    <p> Some text here to see what's going on </p>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-primary">
+        <div class="container d-flex flex-column flex-md-row justify-content-between">
+            <a class="navbar-brand mr-4" href="{{ url_for('home') }}">Daniel Woolcott</a>  <!-- text to appear as main title on all paages at top of nav bar -->
+            <!-- Navbar Right Side -->
+            <a class="btn btn-secondary my-2 my-sm-0" data-toggle="modal" data-target="#GetInTouchModal">Get In Touch</a>
+        </div>
+      </nav>
+    </header>
+    <main role="main">
+        <p> Some text here to see what's going on </p>
+    </main>
 </body>
 </html>
