--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-primary">
         <div class="container d-flex flex-column flex-md-row justify-content-between">
-            <a class="navbar-brand mr-4" href="{{ url_for('home') }}">Daniel Woolcott</a>  <!-- text to appear as main title on all paages at top of nav bar -->
+            <a class="navbar-brand mr-4" href="#">Daniel Woolcott</a>  <!-- text to appear as main title on all pages at top of nav bar -->
             <!-- Navbar Right Side -->
-            <a class="btn btn-secondary my-2 my-sm-0" data-toggle="modal" data-target="#GetInTouchModal">Get In Touch</a>
         </div>
       </nav>
     </header>
