--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- link to main stylesheet -->
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min_super.css">
     <link rel="stylesheet" type="text/css" href="/css/alt_14.css">
-    <title>dwoolc github</title>
+    <title>dwoolc</title>
 </head>
 <body>
     <header>
@@ -13,11 +13,22 @@
         <div class="container d-flex flex-column flex-md-row justify-content-between">
             <a class="navbar-brand mr-4" href="#">Daniel Woolcott</a>  <!-- text to appear as main title on all pages at top of nav bar -->
             <!-- Navbar Right Side -->
+            <a class="btn btn-secondary my-2 my-sm-0" data-toggle="modal" data-target="#GetInTouchModal">Get In Touch</a>
         </div>
       </nav>
     </header>
+
+
     <main role="main">
-        <p> Some text here to see what's going on </p>
+        <div class="position-relative overflow-hidden p-3 p-md-5 left">
+            <div class = "container d-flex flex-column flex-md-row justify-content-between">
+                <div class="row top-buffer">
+                        <div class="col col-md-7">
+                            <p>This is where the about me section is going to go</p>
+                        </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
