--- a/Python.html
+++ b/Python.html
@@ -17,7 +17,7 @@
             <div class="container d-flex flex-column flex-md-row justify-content-between">
                 <a class="navbar-brand mr-4" href="/home">Daniel Woolcott</a>  <!-- text to appear as main title on all paages at top of nav bar -->
                 <!-- Navbar Right Side -->
-                <a class="btn btn-secondary my-2 my-sm-0" data-toggle="modal" data-target="#GetInTouchModal">Get In Touch</a>
+                <a class="btn btn-secondary my-2 my-sm-0" href="mailto:dowoolcott@gmail.com">Get In Touch</a>
             </div>
           </nav>
         </header>
@@ -145,7 +145,7 @@
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <form method ="POST" action="">
-                    <input id="csrf_token" name="csrf_token" type="hidden" value="IjM3OWE3YTQ1MWJmYjFmMWNlNjg5MmEzYmRlODcwMTBjOWI1NjIzNDMi.X6rF8g.pqr0sKt03ZLoNxxLitHFBYlYSG4">
+                    <input id="csrf_token" name="csrf_token" type="hidden" value="IjllY2QwYmZhMDAzNDBhYjJlNmNkZmQ5Yjg1NDgwNjg4YzMxMzMxZDki.X6rLyA.s8sQsOMRrJVQBM8Y6GXloCUyK5o">
                       <div class="modal-header">
                         <h5 class="modal-title" id="GetInTouchModalLabel">Get In Touch</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
